# proj

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  send_sample_emails.py
dags/: email_embedding_pipeline.py
data/chroma_db/: chroma.sqlite3
scripts/: add_dummy_emails.py  db_viewer.py  init_chroma.py
src/: app.py  config.py  db_client.py  embedder.py  network_viz.py  ngram_analyzer.py  tfidf_analyzer.py  word_cloud_gen.py
